# maturak-music-api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: database.rs  main.rs  spotifyapi.rs
