[package]
name = "music-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
anyhow = "1.0.98"
base64 = "0.22.1"
dotenv = "0.15.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
